syntax = "proto3";

package grpctest;

// The greeting service definition.
service Greeter {
    // Performs a handshake
    rpc Handshake (HandshakeRequest) returns (HandshakeReply);
    // Sends a greeting
    rpc SayHello (HelloRequest) returns (HelloReply);
}

// The request message containing the user's name.
message HandshakeRequest {
    string key = 1;
}

// The response message containing the greetings
message HandshakeReply {
    string key = 1;
}

// The request message containing the user's name.
message HelloRequest {
    string name = 1;
}

// The response message containing the greetings
message HelloReply {
    string message = 1;
}
